--- a/app/templates/mtg-trail-tools-export-traces.hbs
+++ b/app/templates/mtg-trail-tools-export-traces.hbs
@@ -1,6 +1,6 @@
 {{#dropdown-list item="Export" icon="export" toggle="tooltip" title="map.menu.mtg.trail.tools.export.trailer.tooltip"}}
     <ul class="dropdown-menu mtg-trail-tools-export-dropdown">
-      {{#each formats as |format|}}
+      {{#each formats key="@index" as |format|}}
           <li><a {{action 'trailerTraceExportAction' format}}>{{format}}</a></li>
       {{/each}}
     </ul>
