fix: mise à jour suite migration

--- a/app/templates/mtg-trail-manager-trails.hbs
+++ b/app/templates/mtg-trail-manager-trails.hbs
@@ -42,5 +42,5 @@
         <span class="glyphicon glyphicon-hand-up" aria-hidden="true"></span>
         </button>
     </td>
-    <td class="mtg-trail-trails-name" colspan="2">Afficher toutes les pistes</td>
+    <td class="mtg-trail-trails-name" colspan="2">{{t "map.menu.mtg.trail.select.all" }}</td>
 </tr>
